--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "body-scroll-lock": "^4.0.0-beta.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.6.2",
     "sass": "^1.57.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "dotenv": "^16.0.3",
     "gulp": "^4.0.2",
     "gulp-webp": "^4.0.1",
     "vite": "^4.0.0"
