--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 // import.meta.env.VITE_API_KEY,
-VITE_DEV_REQUEST=http://localhost/carlota/public
-VITE_PROD_REQUEST=https://carlota.international
+VITE_prod_REQUEST=http://localhost/carlota/public
+VITE_DEV_REQUEST=https://carlota.international
