--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "body-scroll-lock": "^4.0.0-beta.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.2",
-    "sass": "^1.57.1"
+    "sass": "^1.57.1",
+    "sweetalert2": "^11.7.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
